[tool.poetry]
name = "libhoney"
version = "2.0.0" # Update using bump2version
description = "Python library for sending data to Honeycomb"
authors = ["Honeycomb.io <feedback@honeycomb.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/honeycombio/libhoney-py"
repository = "https://github.com/honeycombio/libhoney-py"

[tool.poetry.dependencies]
python = ">=3.5, <4"
requests = "^2.24.0"
statsd = "^3.3.0"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
coverage = [{version = "^5", python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4"}]
pylint = [{version = "^2", python = ">=3.5"}]
pycodestyle = "^2.6.0"
mock = {version = "^3.0.5", python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*"}
requests-mock = "^1.8.0"
tornado = [{version = "^6.0.4", python = ">=3.5"}]
autopep8 = "^1.5.3"
bump2version = {version="^1.0.0", python = ">=3.5"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
