[tool.poetry]
name = "libhoney"
version = "2.4.0" # Update using bump2version
description = "Python library for sending data to Honeycomb"
authors = ["Honeycomb.io <feedback@honeycomb.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/honeycombio/libhoney-py"
repository = "https://github.com/honeycombio/libhoney-py"

[tool.poetry.dependencies]
python = ">=3.7, <4"
requests = "^2.24.0"
statsd = ">=3.3,<5.0"
urllib3 = ">=1.26,<3.0"

[tool.poetry.dev-dependencies]
coverage = "^7.2.7"
pylint = [{version = "^2.13", python = ">=3.7,<4"}]
pycodestyle = "^2.10.0"
requests-mock = "^1.11.0"
tornado = "^6.2"
autopep8 = "^2.0.2"
bump2version = "^1.0.1"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
