[tool.poetry]
name = "libhoney-django-dynamic-fields-example"
version = "0.1.0"
description = "Django example with dynamic fields using libhoney"
authors = ["honeycombio"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
libhoney = {path = "../..", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
