[tool.poetry]
name = "libhoney-django-response-time-example"
version = "0.1.0"
description = "Django example with response time using libhoney"
authors = ["honeycombio"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
libhoney = {path = "../..", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
