[tool.poetry]
name = "libhoney-django-dynamic-fields-example"
version = "0.1.0"
description = "Django example with dynamic fields using libhoney"
authors = ["honeycombio"]

[tool.poetry.dependencies]
django = "^2.2.25"
python = "^3.8"
libhoney = {path = "../..", develop = true}
python-dotenv = "^0.14.0"
