[tool.poetry]
name = "libhoney-tornado-example"
version = "0.1.0"
description = "Tornado example using libhoney"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
statsd = "^3.3.0"
tornado = [{version = "^6.0.4", python = ">=3.5"}]
libhoney = {path = "../..", develop = true}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
